# postman-collection-rs

./: CHANGELOG.md  Cargo.toml  Changelog.md  README.md
.github/workflows/: ci.yml  release-plz.yml
examples/: printer.rs
src/: lib.rs
src/v1_0_0/: mod.rs
src/v2_0_0/: mod.rs
src/v2_1_0/: mod.rs
tests/: api_coverage.rs  regression.rs
tests/fixtures/collection/: apikey-v1.0.0.json  apikey-v2.0.0.json  apikey-v2.1.0.json  edgegrid-v2.1.0.json  graphql-query-v2.1.0.json  swagger-petstore-v1.0.0.json  swagger-petstore-v2.0.0.json  swagger-petstore-v2.1.0.json
tests/fixtures/collection/coverage/: v1-helper-attributes-empty-object.json  v1-helper-attributes-object.json  v1-helper-attributes-string.json  v2.0.0-item-group.json  v2.1.0-item-group.json
tests/fixtures/schema/: postman-collection-v1.0.0.json  postman-collection-v2.0.0.json  postman-collection-v2.1.0.json
