[package]
name = "postman_collection"
version = "0.3.1"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
description = "A Postman Collection serialization & deserialization library."
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/mandrean/postman-collection-rs"
documentation = "https://docs.rs/postman_collection"
readme = "README.md"
keywords = ["postman", "collection", "postman-collection", "serialization", "deserialization"]

[lints.rust]
unsafe_code = "warn"

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
glob = "0.3.3"
