[package]
name = "postman_collection"
version = "0.3.1"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
description = "A Postman Collection serialization & deserialization library."
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/mandrean/postman-collection-rs"
documentation = "https://docs.rs/postman_collection"
readme = "README.md"
keywords = ["postman", "collection", "postman-collection", "serialization", "deserialization"]

[lints.rust]
unsafe_code = "warn"

[package.metadata.docs.rs]
features = ["yaml"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
yaml = ["dep:yaml_serde"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.18"
url = "2.5.8"
yaml_serde = { version = "0.10.4", optional = true }

[dev-dependencies]
glob = "0.3.3"
